# game_exploration

./: Cargo.toml  README.md
resources/: display_config.ron
src/: main.rs
src/components/: aabb.rs  heading.rs  mod.rs  player.rs  player_camera.rs  position.rs  size.rs  speed.rs
src/states/: example.rs  mod.rs
src/systems/: aabb_follow_system.rs  camera_follow_system.rs  config_system.rs  draw_aabb_system.rs  draw_heading_system.rs  heading_system.rs  mod.rs  movement_system.rs  physics_system.rs
src/systems/physics/: aabb_follow_system.rs  draw_aabb_system.rs  generate_collision_manifolds_system.rs  generate_constraints_system.rs  mod.rs  movement_system.rs  physics.rs
